[package]
name = "PavlovReplayToolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26"
egui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rfd = "0.15.3"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
image = "0.25.6"

[build-dependencies]
image = "0.25.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"