[package]
name = "PavlovReplayToolbox"
version = "0.1.5"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rfd = "0.15.3"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
image = "0.25.6"
directories = "6.0.0"
rayon = "1.7"
open = "5.3.2"

[build-dependencies]
image = "0.25.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"